fix:  various VideoList layout problems
- List content overflows
  - Fix using VariableSizeList from react-window
- Horizontal align center CombinedPlaylist
- Padding right list content (distant it from scrollbar)

--- a/src/components/ListComponents/VideoList/styles.module.scss
+++ b/src/components/ListComponents/VideoList/styles.module.scss
@@ -1,10 +1,16 @@
 @import "../../../utils/styles/colors";
+@import "../../../utils/styles/variables";
 
 .listItem {
   padding: 10px 10px;
   border-bottom: 1px solid lighten(#222, 70%);
   display: flex;
   align-items: center;
+  padding-right: 1em;
+
+  @media screen and (min-width: $mobile-width) {
+    padding-right: 2.2em;
+  }
 }
 
 .songList {
